# CPFileMgr

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  README.md  addresses.2.01.2000.0000.json  addresses.2.01.7002.0001.json  compile_commands.json
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
include/: battery.hpp
src/: main.c
